[package]
name = "bender_config"
version = "0.1.0"
authors = ["David Huss <dh@widerstandzwecklos.at>"]

[dependencies]
docopt = "1"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
toml = "0.4"
rand = "0.5"
dialoguer = "0.1.0"
colored = "1.6"